Name:                   scrapegis
Version:                0.0.0
Author:                 Ryan Johnson <ryan.txanson@gmail.com>
Maintainer:             Ryan Johnson <ryan.txanson@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.20
Build-Type:             Simple
Data-Files:
    src/Usage.txt


Library
  Hs-source-dirs:      src
  Build-depends:       base >= 4 && < 5
                     , lens 
                     , aeson == 0.7.0.*
                     , wreq == 0.1.0.1
                     , docopt
                     , cassava
                     , bytestring
                     , containers
                     , text
                     , vector == 0.10.0.*

  Exposed-modules:     Scrapegis
  Default-Language:     Haskell2010

Executable scrapegis
  main-is:          Main.hs
  ghc-options:
      -Wall
  hs-source-dirs:      src
  Build-depends:       base >= 4 && < 5
                     , lens 
                     , aeson == 0.7.0.*
                     , wreq == 0.1.0.1
                     , docopt
                     , cassava
                     , bytestring
                     , containers
                     , text
                     , vector == 0.10.0.*
  default-language: Haskell2010

-- TODO: docopt isn't yet in cabal, how to include this in build depends?

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
  Location:             https://bitbucket.org/rtxanson/scrapegis.git
